--- a/content/resources/21w-775s17.md
+++ b/content/resources/21w-775s17.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21w-775-writing-about-nature-and-environmental-issues-spring-2017/9c9e2caf9ee317d412347b3227be5066_21W-775S17.jpg
+file: /media/courses/21w-775-writing-about-nature-and-environmental-issues-spring-2017/9c9e2caf9ee317d412347b3227be5066_21W-775S17.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The Three Brothers rock formation is a popular tourist attraction at Yosemite
@@ -13,6 +13,8 @@ image_metadata:
   image-alt: 'A photograph of a rock formation known as "Three Brothers" at Yosemite
     National Park. The rock formation is surrounded by trees and reflected in a body
     of water in the foreground.  '
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 21W-775S17
 uid: 9c9e2caf-9ee3-17d4-1234-7b3227be5066
