Sync all content

--- a/content/resources/21w-775s17-th.md
+++ b/content/resources/21w-775s17-th.md
@@ -14,8 +14,8 @@ image_metadata:
     National Park. The rock formation is surrounded by trees and reflected in a body
     of water in the foreground.  '
 learning_resource_types: []
-ocw_type: OCWImage
 resourcetype: Image
 title: 21W-775S17-th
+type: OCWImage
 uid: 331ff60c-715e-5b42-5933-097a2880d115
 ---
