--- a/content/resources/21w-775s17.md
+++ b/content/resources/21w-775s17.md
@@ -14,8 +14,8 @@ image_metadata:
     National Park. The rock formation is surrounded by trees and reflected in a body
     of water in the foreground.  '
 learning_resource_types: []
-ocw_type: OCWImage
 resourcetype: Image
 title: 21W-775S17
+type: OCWImage
 uid: 9c9e2caf-9ee3-17d4-1234-7b3227be5066
 ---
