--- a/content/resources/21w-775s17-th.md
+++ b/content/resources/21w-775s17-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/21w-775-writing-about-nature-and-environmental-issues-spring-2017/331ff60c715e5b425933097a2880d115_21W-775S17-th.jpg
+file: /courses/21w-775-writing-about-nature-and-environmental-issues-spring-2017/331ff60c715e5b425933097a2880d115_21W-775S17-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The Three Brothers rock formation is a popular tourist attraction at Yosemite
@@ -14,8 +14,8 @@ image_metadata:
     National Park. The rock formation is surrounded by trees and reflected in a body
     of water in the foreground.  '
 learning_resource_types: []
+ocw_type: ''
 resourcetype: Image
 title: 21W-775S17-th
-type: OCWImage
 uid: 331ff60c-715e-5b42-5933-097a2880d115
 ---
