--- a/content/resources/21w-775s17-th.md
+++ b/content/resources/21w-775s17-th.md
@@ -14,6 +14,7 @@ image_metadata:
     National Park. The rock formation is surrounded by trees and reflected in a body
     of water in the foreground.  '
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: ''
 resourcetype: Image
 title: 21W-775S17-th
