--- a/content/resources/21w-775s17-th.md
+++ b/content/resources/21w-775s17-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21w-775-writing-about-nature-and-environmental-issues-spring-2017/331ff60c715e5b425933097a2880d115_21W-775S17-th.jpg
+file_size: 5314
 file_type: image/jpeg
 image_metadata:
   caption: The Three Brothers rock formation is a popular tourist attraction at Yosemite
