--- a/content/resources/21w-775s17.md
+++ b/content/resources/21w-775s17.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21w-775-writing-about-nature-and-environmental-issues-spring-2017/9c9e2caf9ee317d412347b3227be5066_21W-775S17.jpg
+file_size: 47095
 file_type: image/jpeg
 image_metadata:
   caption: The Three Brothers rock formation is a popular tourist attraction at Yosemite
