--- a/content/resources/21w-775s17.md
+++ b/content/resources/21w-775s17.md
@@ -8,8 +8,8 @@ image_metadata:
   caption: The Three Brothers rock formation is a popular tourist attraction at Yosemite
     National Park. This course focuses on writings about American landscapes and students
     will examine the symbolism and environmental issues surrounding these landscapes.
-    (Image courtesy of {{% resource_link "4659f8a0-c4e8-4f52-960d-cddaa477cbf0" "Mitchell
-    Cipriano" %}} on flickr. License CC BY-NC-SA.)
+    (Image courtesy of [Mitchell Cipriano](https://flic.kr/p/hhaGBH) on flickr. License
+    CC BY-NC-SA.)
   credit: ''
   image-alt: 'A photograph of a rock formation known as "Three Brothers" at Yosemite
     National Park. The rock formation is surrounded by trees and reflected in a body
